# smp_jetmass_run2

./: .gitignore  AGENTS.md  CLAUDE.md  OMNIFOLD_SKIM.md  README.md  lpc_container.sh  pyproject.toml
configs/: README.md  dijet_mg_pythia8_2018_test.json  dijet_pythia_2018.json  dijet_pythia_2018_lxplus.json  last_run.json  trijet_data_2018.json  zjet_data_2018_finebins.json  zjet_data_all_minimal_rho_r2_lxplus.json  zjet_data_skim_casa.json  zjet_herwig_2018_finebins.json  zjet_herwig_2018_validation_test.json  zjet_herwig_all_minimal_rho_r2_jmsjmr_unity.json  zjet_herwig_all_validation.json  zjet_nlo_all.json  zjet_nlo_ptz_all.json  zjet_nlo_ptz_mass_all.json  zjet_nlo_ptz_skim_casa.json  zjet_ntuple_2018_data.json  zjet_ntuple_2018_herwig.json  zjet_ntuple_2018_pythia.json  zjet_omnifold_skim_casa.json  zjet_omnifold_skim_local.json  zjet_omnifold_skim_lpc.json  zjet_pythia_2016APV_minimal_rho_r2_casa2gb_allsyst_jmsjmr_unity.json  zjet_pythia_2016_minimal_rho_r2_casa2gb_allsyst_jmsjmr_unity.json  zjet_pythia_2017_minimal_rho_r2_casa2gb_allsyst_jmsjmr_unity.json  zjet_pythia_2018.json  zjet_pythia_2018_finebins.json  zjet_pythia_2018_finebins_split.json  zjet_pythia_2018_minimal_rho_r2_casa2gb_allsyst_jmsjmr_unity.json  zjet_pythia_2018_reweight_cr1_rho_r2.json  zjet_pythia_2018_reweight_cr1_rho_r2_lxplus.json  zjet_pythia_2018_reweight_vincia_rho.json  zjet_pythia_2018_validation_test.json  zjet_pythia_all_minimal_rho_r2.json  zjet_pythia_all_minimal_rho_r2_casa2gb.json  zjet_pythia_all_minimal_rho_r2_casa2gb_allsyst.json  zjet_pythia_all_minimal_rho_r2_infn.json  (+9 more)
(+181 files in other folders)
