[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smp-jetmass-run2"
version = "0.1.0"
dependencies = [
    "coffea>=2025.7.0",
    "correctionlib>=2.7",
    "hist>=2.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "uproot>=5",
    "vector>=1.4",
]

[project.optional-dependencies]
dask = [
    # dask-awkward pins dask<2025.4.0; coffea needs >=2024.3.0. Stay in that window
    # (matches the known-good env: dask 2025.3.1 + dask-awkward 2026.2.1).
    "dask[distributed]>=2024.3.0,<2025.4.0",
    "dask-awkward",
    "dask-histogram",
    "fsspec-xrootd>=0.5.1",
]
test = [
    "pytest>=8",
]
notebook = [
    "jupyterlab>=4",
    "ipywidgets>=8",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["smp_jetmass_run2*"]

[tool.setuptools.package-data]
"smp_jetmass_run2" = ["corrections/**/*"]
